index.css
:root {
    /* Set sans-serif fonts */
    --sans-font: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir,
        Roboto, Noto, "Segoe UI", Arial, Helvetica,
        "Helvetica Neue", sans-serif;

    --base-fontsize: 1.15rem;
    --header-scale: 1.25rem;
    --line-height: 1.618;

    /* Varibles */
    --outlineColor: lightGray;
    --smallBorderRadius: 5px;

    --plateBackroundColor: white;
    --mainColor: rgb(120, 167, 77);
    /*rgb(119, 175, 60);*/
    --plateRadius: 10px;
    --titleColor: white;

    --inputColor: white;
    --buttonColor: rgb(235, 235, 235);
    --inputRadius: 5px;

    --redColor: #ffdddd;
    --greenColor: green;
}

* {
    font-family: Arial, Helvetica, sans-serif;
    padding: 0px;
    border: 0px;
    margin: 0px;
    /* font-size: 1.5rem; */
    /* Changes scale of ALL text  */
}

body {
    padding-right: 10%;
    padding-left: 10%;
}


@media only screen and (max-width: 1280px) {
    body {
        padding-right: 5%;
        padding-left: 5%;
    }
}

@media only screen and (max-width: 1024px) {
    body {
        padding-right: 2%;
        padding-left: 2%;
    }
}


header {
    padding: 0.5rem 1.5rem 1.5rem 1.5rem;
    display: flex;
    align-content: center;
    justify-content: center;
}

.centerContent {
    margin-left: auto;
    margin-right: auto;
}

nav {
    text-align: center;
}

nav>* {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
}

main {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 20px;
}

main>* {
    width: 100%;
}

main>*:last-child {
    grid-column: span 3;
}

code {
    font-family: monospace;
}

select {
    border-radius: var(--inputRadius);
    border: 1px solid var(--outlineColor);
    font-size: calc(var(--header-scale) * 0.8);
    padding: 0.2rem 0.4rem;
    background: white;
    align-self: center;
}

button {
    border-radius: var(--inputRadius);
    font-size: calc(var(--header-scale) * 0.8);
    padding: 0.3rem 0.9rem;
    transition: 0.4s;
    background: var(--buttonColor);
    align-self: center;
    border: 1px solid rgba(122, 122, 122, 0.1);
    box-shadow: 1px 2px 3px rgba(88, 88, 88, 0.2);
}

button:hover {
    filter: brightness(0.8);
    cursor: pointer;
}

textarea {
    padding: 5px;
    background: var(--inputColor);
    border: 1px solid var(--outlineColor);
    border-radius: var(--inputRadius);
    height: 200px;
}

input {
    height: 20px;
    text-align: center;
    background: var(--inputColor);
    border: 1px solid var(--outlineColor);
    border-radius: var(--inputRadius);
}


summary {
    cursor: pointer;
}

table {
    border-collapse: collapse;
}



td>input {
    width: 80%;
}

td {
    padding: 5px;
}

td:first-child {
    width: 100px;
}

tr {
    width: 100%;
}

a {
    color: #5050e7;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}


.justifyCenter {
    display: flex;
    gap: 5px;
    align-items: center;
}

.plate {
    display: flex;
    flex-direction: column;
    gap: 10px;

    overflow: hidden;
    background: var(--plateBackroundColor);

    border-radius: var(--plateRadius);
    border: 1px solid var(--mainColor);
}

.plateTitle {
    background-color: var(--mainColor);
    color: var(--titleColor);
    font-size: var(--header-scale);
    text-align: center;

    border-radius: calc(var(--plateRadius)-4) calc(var(--plateRadius)-4) 0 0;
    padding: 8px;
}

.smallPlate {
    display: flex;
    flex-direction: column;

    overflow: hidden;
    background: var(--plateBackroundColor);

    border-radius: var(--smallBorderRadius);
    /*border: 1px solid var(--outlineColor); */
}

.smallTitle {
    background-color: var(--outlineColor);
    font-size: var(--base-fontsize);
    text-align: center;
    border-radius: calc(var(--plateRadius)-4) calc(var(--plateRadius)-4) 0 0;
    padding: 5px;
}

.plateContent {
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    gap: 10px;
}

.scrollablePlate {
    max-height: 118px;
    overflow-y: auto;
}


.inactive {
    display: none;
    animation: slideIn 1s linear;
}


.synonymSelect {
    font-size: 0.8rem;
}


.pulse {
    animation: pulse 4s ease-in-out infinite;
}

.loading-box {
    background: white;
    padding: 20px;
    border-radius: 5px;
    text-align: center;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
}

.foundingText {
    text-align: center;
}

#synonymForm {
    display: flex;
}

#ExampleSequance {
    align-self: center;
}

#libraries {
    background-color: var(--outlineColor);
    font-size: var(--header-scale);
    text-align: center;
    border-radius: calc(var(--plateRadius)-4) calc(var(--plateRadius)-4) 0 0;
    padding: 5px;
}

#customFile {
    border: none;
}

.statusFadeIn {
    animation: statusUpdateIn 0.2s;
}

.statusFadeOut {
    animation: statusUpdateOut 0.2s;
    opacity: 0;
}

#statusSearchSymbols {
    height: auto;
}

#dropdownBody * {
    padding: 2px;
    /*border-top: 1px solid var(--outlineColor);*/

}

#rankingOrder {
    width: 80%;
}

#startButton {
    width: 100%;
    font-weight: bold;

}

#startButtonText {
    color: var(--greenColor);
}


#searchSymbolsPlate> :nth-child(1) {
    flex: 0 0 50%;
}

#searchSymbolsPlate> :nth-child(2) {
    flex: 0 0 40%;
}

#overlay {
    display: flex;
    position: fixed;
    overflow: hidden;
    width: 100%;
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.5);
    justify-content: center;
    align-items: center;
}

#libraryInfo {
    padding: 0.5rem;
    background-color: rgba(0, 0, 0, 0.03);
    border-radius: var(--inputRadius);
    /* font-family: 'Times New Roman', Times, serif; */
}

#libraryInfo * {
    /* font-family: 'Times New Roman', Times, serif; */
}

#synonymSelect {
    border: 0.5px solid var(--outlineColor);
    padding: 0px;
}

#libraryInfo p {
    margin-bottom: 0.4rem;
}

#libraryInfo ul {
    list-style-position: inside;
    padding-left: 0;
    list-style-type: square;
}

#libraryInfoOLD ul li {
    /* identation for text */
    text-indent: -0.5rem;
    padding-left: 0.5rem;
}


#outputTable {
    padding-left: 10%;
    padding-right: 10%;
    display: none;

}

#outputTable>* {
    display: flex;
    justify-content: space-between;
    width: 100%;
}

#outputTable tr {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.fazeIn {
    /*animation: fazeInA 0.3s ease-in-out;*/
    height: 100%;
}

.fazeOut {
    /*animation: fazeOutA 0.3s ease-in-out;*/
    height: 0;
}

@keyframes fazeOutA {
    0% {
        height: 100%;
    }

    100% {
        height: 0%;
    }
}

@keyframes fazeInA {
    0% {
        height: 0%;
    }

    100% {
        height: 100%;

    }
}


@keyframes statusUpdateOut {
    0% {
        transform: translate(0px, 0px);
        opacity: 100%;
    }

    100% {
        transform: translate(0px, -20px);
        opacity: 0%;
    }
}

@keyframes statusUpdateIn {
    0% {
        transform: translate(0px, 20px);
        opacity: 0%;
    }

    100% {
        opacity: 100%;
        transform: translate(0px, 0px);
    }
}


@keyframes pulse {
    0% {
        color: black;
    }

    50% {
        color: var(--outlineColor);
    }

    100% {
        color: black;
    }
}


/* Validate sgRNA mode */

body.validate-mode .design-only {
    opacity: 0.35;
    pointer-events: none;
}

body:not(.validate-mode) .validate-only {
    display: none !important;
}

body.validate-mode #libraries {
    opacity: 0.5;
    pointer-events: none;
}

body.validate-mode .validate-btn-active {
    background-color: var(--mainColor);
    color: white;
}

.validate-btn {
    font-size: calc(var(--header-scale) * 0.65);
    white-space: nowrap;
}

